--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -20,14 +20,18 @@
     </style>
   </head>
   <body>
+
     <div id="map"></div>
+    
     <script>
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 59.3498092, lng: 18.0684758},
-          zoom: 16
+          center: /*{lat: 59.3498092, lng: 18.0684358},*/ {lat: 59.331477, lng:18.068738},
+          zoom: 20,
+          mapTypeId: 'hybrid'
         });
+        map.setTilt(45);
       }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
