--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -1,7 +1,7 @@
-
-<!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
@@ -11,29 +11,151 @@
       #map {
         height: 100%;
       }
+      .container-fluid {
+        height: 100%;
+      }
+
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
+
+      .up {
+        justify-content: center;
+        height: 30px;
+      }
+
+      .down {
+        justify-content: center;
+        height: 30px;
+      }
+      .leftRight {
+        justify-content: center;
+        height: 30px;
+      }
+      .zoom {
+        justify-content: center;
+        margin-top: 10px;
+      }
+
+      .zoomButton{
+        height: 40px;
+        border-radius: 20px;
+      }
+      .arrows {
+        margin-top: 6px;
+      }
+
     </style>
   </head>
   <body>
+    <div class="row container-fluid">
+      <div class="col-8">
+        <div id="map"></div>
+      </div>
+      <div class="col-4">
+            <p class="row zoom">
+              <button class="zoomButton" onclick="map.setZoom(map.zoom+1)">
+                <i class="fa fa-search-plus fa-lg" aria-hidden="true"></i>
+              </button>
+              <button class="zoomButton" onclick="map.setZoom(map.zoom-1)">
+                <i class="fa fa-search-minus fa-lg" aria-hidden="true"></i>
+              </button>
+            </p>
+            <p class="row">
+              <div class="col-12">
+                <div class="row up">
+                  <button type="button" onclick="pan('up')">
+                    <i class="fa fa-chevron-up"></i>
+                  </button>
+                </div>
+                <div class="row leftRight">
+                  <button class="button" onclick="pan('left')">
+                    <i class="fa fa-chevron-left"></i></button>
+                    <i class="fas fa-arrows-alt fa-lg arrows"></i>
+                  <button class="button" onclick="pan('right')">
+                    <i class="fa fa-chevron-right"></i>
+                  </button>
+                </div>
+                <div class="row down">
+                  <button class="button" onclick="pan('down')">
+                    <i class="fa fa-chevron-down"></i>
+                  </button>
+                </div>
+              </div>
+            </p>
+        </p>
 
-    <div id="map"></div>
+      </div>
+    </div>
+
     <script>
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: /*{lat: 59.3498092, lng: 18.0684358},*/ {lat: 59.331477, lng:18.068738},
-          zoom: 20,
-          mapTypeId: 'hybrid'
+          zoom:  5,
+          mapTypeId: 'hybrid',
+          disableDefaultUI: true
         });
         map.setTilt(45);
+
+        marker = new google.maps.Marker({
+          map: map,
+          draggable: true,
+          animation: google.maps.Animation.DROP,
+          position: {lat: 59.331477, lng: 18.068738}
+        });
+        marker.addListener('click', toggleBounce);
+
+
+        markerUndraggable = new google.maps.Marker({
+          map: map,
+          draggable: false,
+          animation: google.maps.Animation.DROP,
+          icon: {
+            url: "http://maps.google.com/mapfiles/ms/icons/blue-dot.png"
+          },
+          position: {lat: 59.491477, lng: 18.068720}
+        });
+      }
+
+        function toggleBounce() {
+          if (marker.getAnimation() !== null) {
+            marker.setAnimation(null);
+          } else {
+            marker.setAnimation(google.maps.Animation.BOUNCE);
+          }
+        }
+
+
+      function pan(direction){
+        let newlat = map.getCenter().toJSON().lat;
+        let newlng = map.getCenter().toJSON().lng
+        let panNr = Math.pow(2, 0.6*-map.zoom);
+
+        if (direction == "left") {
+          newlng -= panNr
+        }
+        else if (direction == "right") {
+          newlng += panNr
+        }
+        else if (direction == "up") {
+          newlat += panNr
+        }
+        else if (direction == "down"){
+          newlat -= panNr
+        }
+
+        map.setCenter({lat:newlat, lng:newlng})
+
+
       }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
     async defer></script>
+
   </body>
 </html>
