--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -52,10 +52,10 @@
   </head>
   <body>
     <div class="row container-fluid">
-      <div class="col-8">
+      <div class="col-sm-8 12">
         <div id="map"></div>
       </div>
-      <div class="col-4">
+      <div class="col-sm-4 12">
             <p class="row zoom">
               <button class="zoomButton" onclick="map.setZoom(map.zoom+1)">
                 <i class="fa fa-search-plus fa-lg" aria-hidden="true"></i>
