--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -39,8 +39,8 @@
       .down {
         justify-content: center;
         height: 70px;
-        margin: 3%;
       }
+
       .leftRight {
         justify-content: center;
         height: 70px;
@@ -61,7 +61,7 @@
       }
 
       .arrows {
-        margin: 4%;
+        margin-top: 3%;
       }
 
       .container-fluid {
