--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -158,20 +158,11 @@
 
     <script>
       let btnAdd = document.getElementById('btnAdd')
-      let deferredPrompt = null;
       window.addEventListener('beforeinstallprompt', (e) => {
         // Prevent Chrome 67 and earlier from automatically showing the prompt
         e.preventDefault();
         // Stash the event so it can be triggered later.
         deferredPrompt = e;
-
-        // Update UI notify the user they can add to home screen
-        btnAdd.style.display = 'block';
-      });
-      btnAdd.addEventListener('click', (e) => {
-        // hide our user interface that shows our A2HS button
-        btnAdd.style.display = 'none';
-        // Show the prompt
         deferredPrompt.prompt();
         // Wait for the user to respond to the prompt
         deferredPrompt.userChoice
@@ -183,6 +174,15 @@
             }
             deferredPrompt = null;
           });
+
+        // Update UI notify the user they can add to home screen
+        //btnAdd.style.display = 'block';
+      });
+      btnAdd.addEventListener('click', (e) => {
+        // hide our user interface that shows our A2HS button
+        btnAdd.style.display = 'none';
+        // Show the prompt
+        
       });
       var map;
       function initMap() {
