--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -112,7 +112,7 @@
       <button class="startup" id="btnAdd" onclick="this.style.display='none'">
         <div class="welcome">maps.
         </div>
-        <img id="crazyJesper" src="https://i.ibb.co/4MwK8jh/crazy-jesper.png">
+        <img id="crazyJesper" src="./assets/crazy-jesper.png">
       </button>
       <div class="col-md-8 12 map">
         <div id="map"></div>
@@ -182,7 +182,7 @@
         // hide our user interface that shows our A2HS button
         btnAdd.style.display = 'none';
         // Show the prompt
-        
+
       });
       var map;
       function initMap() {
