--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -62,6 +62,10 @@
         height: 80px;
       }
 
+      .personalMarker {
+        justify-content: center;
+      }
+
       .arrows {
         margin-top: 3%;
       }
@@ -121,11 +125,11 @@
         <div class="row">
           <div class="col-4 col-md-12">
             <div class="row zoom">
-              <button class="button zoomButton col-8" onclick="map.setZoom(map.zoom+1)">
+              <button class="button zoomButton col-8" type="button" onclick="map.setZoom(map.zoom+1)">
                 <i class="fa fa-search-plus fa-4x"></i>
               </button>
               <button class="button zoomButton col-8" onclick="map.setZoom(map.zoom-1)">
-                <i class="fa fa-search-minus fa-4x" aria-hidden="true"></i>
+                <i class="fa fa-search-minus fa-4x"></i>
               </button>
             </div>
           </div>
@@ -140,7 +144,9 @@
               <button class="button" onclick="pan('left')">
                 <i class="fa fa-chevron-left fa-4x"></i>
               </button>
+              <button type="button" onclick="findLocation()">
                 <i class="fas fa-arrows-alt fa-3x arrows"></i>
+              </button>
               <button class="button" onclick="pan('right')">
                 <i class="fa fa-chevron-right fa-4x"></i>
               </button>
@@ -151,40 +157,22 @@
               </button>
             </div>
           </div>
+          <div class="col-4 col-md-8 personalMarker">
+              <input type="button" name="button">Jespers special place</input>
+          </div>
+          <div class="col-4 col-md-8 personalMarker">
+              <input type="button" name="button">Johannes hideout</input>
+          </div>
+          <div class="col-4 col-md-8 personalMarker">
+              <input type="button" name="button">Martins mystic endevours</input>
+          </div>
         </div>
 
       </div>
     </div>
 
     <script>
-      let btnAdd = document.getElementById('btnAdd')
-      window.addEventListener('beforeinstallprompt', (e) => {
-        // Prevent Chrome 67 and earlier from automatically showing the prompt
-        e.preventDefault();
-        // Stash the event so it can be triggered later.
-        deferredPrompt = e;
-        deferredPrompt.prompt();
-        // Wait for the user to respond to the prompt
-        deferredPrompt.userChoice
-          .then((choiceResult) => {
-            if (choiceResult.outcome === 'accepted') {
-              console.log('User accepted the A2HS prompt');
-            } else {
-              console.log('User dismissed the A2HS prompt');
-            }
-            deferredPrompt = null;
-          });
-
-        // Update UI notify the user they can add to home screen
-        //btnAdd.style.display = 'block';
-      });
-      btnAdd.addEventListener('click', (e) => {
-        // hide our user interface that shows our A2HS button
-        btnAdd.style.display = 'none';
-        // Show the prompt
-
-      });
-      var map;
+      var map, infoWindow;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: /*{lat: 59.3498092, lng: 18.0684358},*/ {lat: 59.331477, lng:18.068738},
@@ -193,6 +181,38 @@
           disableDefaultUI: true
         });
         map.setTilt(45);
+
+        infoWindow = new google.maps.InfoWindow;
+
+        // Try HTML5 geolocation.
+        function findLocation() {
+          if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function(position) {
+              var pos = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude
+              };
+
+              infoWindow.setPosition(pos);
+              infoWindow.setContent('Location found.');
+              infoWindow.open(map);
+              map.setCenter(pos);
+            }, function() {
+              handleLocationError(true, infoWindow, map.getCenter());
+            });
+          } else {
+            // Browser doesn't support Geolocation
+            handleLocationError(false, infoWindow, map.getCenter());
+          }
+        }
+
+        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+          infoWindow.setPosition(pos);
+          infoWindow.setContent(browserHasGeolocation ?
+                                'Error: The Geolocation service failed.' :
+                                'Error: Your browser doesn\'t support geolocation.');
+          infoWindow.open(map);
+        }
 
         marker = new google.maps.Marker({
           map: map,
@@ -214,14 +234,13 @@
         });
       }
 
-        function toggleBounce() {
-          if (marker.getAnimation() !== null) {
-            marker.setAnimation(null);
-          } else {
-            marker.setAnimation(google.maps.Animation.BOUNCE);
-          }
+      function toggleBounce() {
+        if (marker.getAnimation() !== null) {
+          marker.setAnimation(null);
+        } else {
+          marker.setAnimation(google.maps.Animation.BOUNCE);
         }
-
+      }
 
       function pan(direction){
         let newlat = map.getCenter().toJSON().lat;
@@ -243,6 +262,9 @@
 
         map.setCenter({lat:newlat, lng:newlng})
       }
+
+
+
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
     async defer></script>
