--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -172,7 +172,7 @@
     </div>
 
     <script>
-      var map;
+      var map, infoWindow;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: /*{lat: 59.3498092, lng: 18.0684358},*/ {lat: 59.331477, lng:18.068738},
@@ -181,6 +181,8 @@
           disableDefaultUI: true
         });
         map.setTilt(45);
+
+        infoWindow = new google.maps.InfoWindow;
 
         marker = new google.maps.Marker({
           map: map,
@@ -202,7 +204,6 @@
         });
       }
 
-      infoWindow = new google.maps.InfoWindow;
       function findLocation() {
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
