--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -7,7 +7,7 @@
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <style>
       /* Always set the map height explicitly to define the size of the div
@@ -158,13 +158,13 @@
             </div>
           </div>
           <div class="col-4 col-md-8 personalMarker">
-              <input type="button" class="button" name="button">Jespers special place</input>
+              <input type="button" class="button">Jespers special place</input>
           </div>
           <div class="col-4 col-md-8 personalMarker">
-              <input type="button" class="button" name="button">Johannes hideout</input>
+              <input type="button" class="button">Johannes hideout</input>
           </div>
           <div class="col-4 col-md-8 personalMarker">
-              <input type="button" class="button" name="button">Martins mystic endevours</input>
+              <input type="button" class="button" onclick="centerOnLocation(59.255188, 18.113768)">Martins mystic endevours</input>
           </div>
         </div>
 
@@ -184,6 +184,26 @@
 
         infoWindow = new google.maps.InfoWindow;
 
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+
+            infoWindow.setPosition(pos);
+            infoWindow.setContent('Location found.');
+            infoWindow.open(map);
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        }
+        else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+
         marker = new google.maps.Marker({
           map: map,
           draggable: true,
@@ -201,6 +221,16 @@
             url: "http://maps.google.com/mapfiles/ms/icons/blue-dot.png"
           },
           position: {lat: 59.3498092, lng: 18.0684358}
+        });
+
+        martinMarker = new google.maps.Marker({
+          map: map,
+          draggable: false,
+          animation: google.maps.Animation.DROP,
+          icon: {
+            url: "http://maps.google.com/mapfiles/ms/icons/blue-dot.png"
+          },
+          position: {lat: 59.255188, lng: 18.113768}
         });
       }
 
@@ -232,6 +262,11 @@
                               'Error: The Geolocation service failed.' :
                               'Error: Your browser doesn\'t support geolocation.');
         infoWindow.open(map);
+      }
+
+      function centerOnLocation(lati, longi) {
+        var position = {lat: lati, lng: longi}
+        map.setCenter(position);
       }
 
       function toggleBounce() {
