--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -144,8 +144,8 @@
               <button class="button" onclick="pan('left')">
                 <i class="fa fa-chevron-left fa-4x"></i>
               </button>
-              <button type="button" onclick="findLocation()">
-                <i class="button fas fa-arrows-alt fa-3x arrows"></i>
+              <button type="button" class="button" onclick="findLocation()">
+                <i class="fas fa-arrows-alt fa-3x arrows"></i>
               </button>
               <button class="button" onclick="pan('right')">
                 <i class="fa fa-chevron-right fa-4x"></i>
@@ -158,13 +158,13 @@
             </div>
           </div>
           <div class="col-4 col-md-8 personalMarker">
-              <input type="button" class="button" value="Jespers special place" onclick="centerOnLocation(47.910602, 106.906310)"></input>
+              <input type="button" class="button" value="Jespers&#x00A;special place" onclick="centerOnLocation(47.910602, 106.906310)"></input>
           </div>
           <div class="col-4 col-md-8 personalMarker">
-              <input type="button" class="button" value="Johannes hideout" onclick="centerOnLocation(57.738745, 18.405854)"></input>
+              <input type="button" class="button" value="Johannes&#x00A;hideout" onclick="centerOnLocation(57.738745, 18.405854)"></input>
           </div>
           <div class="col-4 col-md-8 personalMarker">
-              <input type="button" class="button" value="Martins mystery" onclick="centerOnLocation(59.255188, 18.113768)"></input>
+              <input type="button" class="button" value="Martins&#x00A;mystery" onclick="centerOnLocation(59.255188, 18.113768)"></input>
           </div>
         </div>
 
@@ -183,27 +183,9 @@
         map.setTilt(45);
 
         infoWindow = new google.maps.InfoWindow;
-        /*
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
 
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('Location found.');
-            infoWindow.open(map);
-            map.setCenter(pos);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        }
-        else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-        */
+
+        findLocation()
 
         marker = new google.maps.Marker({
           map: map,
