--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -68,6 +68,7 @@
 
       .personalMarker {
         margin-top: 4%;
+        font-size: 8pt
       }
 
       .arrows {
@@ -82,7 +83,7 @@
         position: absolute;
         z-index: 5;
         height: 100vh;
-        width: 100%;
+        width: 100vh;
         background-color: #ffcc99;
       }
 
