--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -20,7 +20,8 @@
         padding: 0;
       }
       .container-fluid {
-        height: 100%;
+        height: 100vh;
+        width: 100vh;
         margin: 0;
         padding: 0;
         background-color: #ffcc99;
@@ -165,7 +166,7 @@
           <div class="col-4 col-md-8 personalMarker">
               <input type="button" class="button" value="Jespers &#x00A;special place" onclick="centerOnLocation(47.910602, 106.906310)"></input>
           </div>
-          <div class="col-4 col-md-8 personalMarker">
+          <div class="col-3 col-md-8 personalMarker">
               <input type="button" class="button" value="Johannes &#x00A;hideout" onclick="centerOnLocation(57.738745, 18.405854)"></input>
           </div>
           <div class="col-4 col-md-8 personalMarker">
