--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -20,8 +20,8 @@
         padding: 0;
       }
       .container-fluid {
-        height: 100vh;
-        width: 100vh;
+        height: 100%;
+
         margin: 0;
         padding: 0;
         background-color: #ffcc99;
@@ -69,7 +69,8 @@
 
       .personalMarker {
         margin-top: 4%;
-        font-size: 8pt
+        font-size: 9pt
+
       }
 
       .arrows {
@@ -83,8 +84,8 @@
       .startup {
         position: absolute;
         z-index: 5;
-        height: 100vh;
-        width: 100vh;
+        height: 100%;
+        width: 100%;
         background-color: #ffcc99;
       }
 
@@ -166,7 +167,7 @@
           <div class="col-4 col-md-8 personalMarker">
               <input type="button" class="button" value="Jespers &#x00A;special place" onclick="centerOnLocation(47.910602, 106.906310)"></input>
           </div>
-          <div class="col-3 col-md-8 personalMarker">
+          <div class="col-4 col-md-8 personalMarker">
               <input type="button" class="button" value="Johannes &#x00A;hideout" onclick="centerOnLocation(57.738745, 18.405854)"></input>
           </div>
           <div class="col-4 col-md-8 personalMarker">
@@ -189,8 +190,6 @@
         map.setTilt(45);
 
         infoWindow = new google.maps.InfoWindow;
-
-        findLocation()
 
         marker = new google.maps.Marker({
           map: map,
@@ -241,7 +240,7 @@
           position: {lat: 57.738745, lng: 18.405854}
         });
 
-
+        findLocation()
       }
 
       function findLocation() {
