--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -70,7 +70,8 @@
 
       .personalMarker {
         margin-top: 4%;
-        font-size: 9pt
+        font-size: 9pt;
+        padding: 5px;
 
       }
 
